# woofalytics-v2

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: app.css
frontend/src/lib/api/: client.ts  types.ts
frontend/src/lib/components/clustering/: ClusterCard.svelte  ClusterSamplePreview.svelte  ClusterSection.svelte  CreateDogFromClusterModal.svelte  index.ts
frontend/src/lib/components/dashboard/: BarkGauge.svelte  BarkTracker.svelte  DetectionPipeline.svelte  ParticleSystem.svelte  RecentBarks.svelte  WaveformVisualizer.svelte  index.ts
frontend/src/lib/components/dogs/: BarkModal.svelte  DogCard.svelte  DogForm.svelte  UntaggedBarkList.svelte  index.ts
frontend/src/lib/components/fingerprints/: AudioPlayer.svelte  FilterPanel.svelte  FingerprintTable.svelte  Pagination.svelte  index.ts
frontend/src/lib/components/reports/: AISummary.svelte  BarkTrendChart.svelte  DateRangePicker.svelte  ExportPreviewModal.svelte  HourlyBarChart.svelte  SummaryStats.svelte
frontend/src/lib/components/ui/: Badge.svelte  Button.svelte  (+5 more)
frontend/src/lib/stores/: audio.ts  bark.ts  fingerprints.ts  index.ts  pipeline.ts  toast.ts  websocket.ts
frontend/src/lib/utils/: format.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/dogs/: +page.svelte
frontend/src/routes/fingerprints/: +page.svelte
frontend/src/routes/reports/: +page.svelte
frontend/src/routes/settings/: +page.svelte
plans/: feat-sveltekit-frontend-migration.md  feat-yamnet-two-stage-bark-detection.md
src/woofalytics/: __init__.py  __main__.py  app.py  config.py
src/woofalytics/api/: __init__.py  auth.py  ratelimit.py  routes.py  routes_export.py  routes_fingerprint.py  routes_notification.py  routes_settings.py  routes_summary.py  schemas.py  schemas_export.py  schemas_fingerprint.py  schemas_summary.py  websocket.py
src/woofalytics/audio/: __init__.py  capture.py  devices.py
src/woofalytics/detection/: __init__.py  clap.py  doa.py  features.py  model.py  resample_cache.py  vad.py  yamnet.py
src/woofalytics/events/: __init__.py  debouncer.py  manager.py  models.py  webhook.py
src/woofalytics/evidence/: __init__.py  metadata.py  storage.py
src/woofalytics/fingerprint/: __init__.py  acoustic_features.py  acoustic_matcher.py  clustering.py  extractor.py  matcher.py  models.py  storage.py
src/woofalytics/observability/: __init__.py  metrics.py
src/woofalytics/prompts/: weekly_summary.prompty
static/: app.js  dogs.html  fingerprints.html  index.html  settings.html  styles.css
tests/: __init__.py  conftest.py  test_api_routes.py  test_api_websocket.py  test_audio.py  test_config.py  test_detection.py  test_evidence.py  test_export.py  test_fingerprint_clustering.py  test_fingerprint_matching.py  test_quiet_hours.py  test_resample_cache.py  test_summary.py  test_yamnet.py
